fix: border mode border overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -346,7 +346,7 @@
       width: calc(100% - 105px);
     }
 
-    .twist-aplayer.twist-aplayer--border {
+    .twist-aplayer--border {
       border: none;
     }
 
